--- a/智能农业/res/layout/setting_language_layout.xml
+++ b/智能农业/res/layout/setting_language_layout.xml
@@ -1,63 +1,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-	android:orientation="vertical" >
-<TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="20dp"
-    android:text="设置语言"
-    android:textColor="@color/blue"
-    android:textSize="35sp"
-    android:layout_marginTop="20dp"/>
-<View 
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/blue"
-    android:layout_marginTop="5dp"
-	android:layout_marginBottom="5dp"/>
+    android:orientation="vertical" >
 
-<RadioGroup  
-    android:id="@+id/radioGroup1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-	android:layout_gravity="center_horizontal"
-	android:gravity="center">
-<RadioButton
-    android:id="@+id/radio0"
-    android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:textSize="25sp"
-	android:text="中文" />
+    <TextView
+        android:layout_width="600dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="设置语言"
+        
+        android:textColor="@color/blue"
+        android:textSize="35sp" />
 
-<RadioButton 
-    android:id="@+id/radio1"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:layout_gravity="center"
-	android:textSize="25sp"
-	android:text="英文" />
-</RadioGroup>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/blue" />
 
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center">
+    <RadioGroup
+        android:id="@+id/radioGroup1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center" >
 
-<Button 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/Cancel_language_btn"
-    android:layout_marginLeft="30dp"
-    android:text="取消"/>
+        <RadioButton
+            android:id="@+id/radio0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="中文"
+            android:textSize="25sp" />
 
-<Button 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/Ok_language_btn"
-    android:text="确定"/>
+        <RadioButton
+            android:id="@+id/radio1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:layout_gravity="center"
+            android:text="英文"
+            android:textSize="25sp" />
+    </RadioGroup>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/Cancel_language_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:text="取消" />
+
+        <Button
+            android:id="@+id/Ok_language_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="确定" />
+    </LinearLayout>
 
 </LinearLayout>
