--- a/智能农业/res/layout/set_air_temp_humi_layout.xml
+++ b/智能农业/res/layout/set_air_temp_humi_layout.xml
@@ -154,5 +154,11 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
+ <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/air_setBtn"
+        android:layout_gravity="right"
+        android:layout_marginRight="50dp"
+        android:text="@string/setting_str"/>
 </LinearLayout>
