--- a/智能农业/res/layout/set_soil_temp_humi_layout.xml
+++ b/智能农业/res/layout/set_soil_temp_humi_layout.xml
@@ -161,7 +161,13 @@
     </LinearLayout>
         
     </LinearLayout>
-
+ <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/soil_setBtn"
+        android:layout_gravity="right"
+        android:layout_marginRight="50dp"
+        android:text="@string/setting_str"/>
 </LinearLayout>
 
 
